--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   },
   "devDependencies": {
     "electron": "^3.0.2"
+  },
+  "dependencies": {
+    "electron-prompt": "^1.2.0",
+    "smalltalk": "^3.2.2"
   }
 }
